# DaktLib-Overlay

./: .gitignore  AGENT.md  ARCHITECTURE.md  CMakeLists.txt  README.md  TODO.md
include/dakt/overlay/: HotkeyManager.hpp  Overlay.hpp  OverlayWindow.hpp  Panel.hpp  ProcessDetector.hpp  ScreenCapture.hpp  WindowTracker.hpp  c_api.h
include/dakt/overlay/core/: Color.hpp  Compositor.hpp  Export.hpp  Geometry.hpp  InputRouter.hpp  Layer.hpp  LayerTree.hpp  OverlayManager.hpp  OverlayWindow.hpp  Painter.hpp  Surface.hpp
include/dakt/overlay/platform/: LinuxSurface.hpp  MacSurface.hpp  WindowsSurface.hpp
src/: HotkeyManager.cpp  OverlayWindow.cpp  Panel.cpp  ProcessDetector.cpp  ScreenCapture.cpp  WindowTracker.cpp  c_api.cpp
src/core/: Color.cpp  Compositor.cpp  Geometry.cpp  InputRouter.cpp  Layer.cpp  LayerTree.cpp  OverlayManager.cpp  OverlayWindow.cpp  Painter.cpp  Surface.cpp
src/platform/linux/: LinuxSurface.cpp
src/platform/mac/: MacSurface.mm
src/platform/windows/: WindowsSurface.cpp
